Added help section to the site

--- a/views/canvas.twig
+++ b/views/canvas.twig
@@ -14,7 +14,7 @@
         <div id="accordion-resizer">
             <div id="accordion" class="wrapper">
 
-                <h3 class="hide-text">Rooms</h3>
+                <h3>Icons</h3>
                 <div>
                     <img id="rect" class="imageToDrag" src="images/rectangle.png">
                     <img id="triangle" class="imageToDrag" src="images/triangle.png">
