Fixed bug when viewing different graphs using tabs

--- a/views/vis.twig
+++ b/views/vis.twig
@@ -19,22 +19,22 @@
 
                         <!-- Nav tabs -->
                         <ul class="nav nav-tabs" role="tablist">
-                            <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Temp & Humidity</a></li>
-                            <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Light</a></li>
-                            <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Movement</a></li>
+                            <li role="presentation" class="active"><a href="#temp" aria-controls="home" role="tab" data-toggle="tab">Temp & Humidity</a></li>
+                            <li role="presentation"><a href="#light" aria-controls="profile" role="tab" data-toggle="tab">Light</a></li>
+                            <li role="presentation"><a href="#movement" aria-controls="messages" role="tab" data-toggle="tab">Movement</a></li>
                             <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
                         </ul>
 
                         <!-- Tab panes -->
                         <div class="tab-content">
-                            <div role="tabpanel" class="tab-pane active" id="home"><div id="visualization"></div></div>
-                            <div role="tabpanel" class="tab-pane" id="profile"><div id="visualization2"></div></div>
-                            <div role="tabpanel" class="tab-pane" id="messages"><div id="visualization3"></div></div>
+                            <div role="tabpanel" class="tab-pane active" id="temp"><div id="visualization"></div></div>
+                            <div role="tabpanel" class="tab-pane" id="light"><div id="visualization2"></div></div>
+                            <div role="tabpanel" class="tab-pane" id="movement"><div id="visualization3"></div></div>
                             <div role="tabpanel" class="tab-pane" id="settings">...</div>
                         </div>
 
                     </div>
-                    <div id="visualization"></div>
+                    {#<div id="visualization"></div>#}
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
